--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -205,6 +205,7 @@
                         <li><a class="hashScroll" href="#showreel"><span>Showreel</span></a></li>
                     </ul>
                 </li>
+                <li class="main-nav"><a class="hashScroll" href="#xms"><span>XMS</span></a> </li>
                 <li class="main-nav"><a class="hashScroll" href="#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li class="main-nav"><a class="hashScroll" href="#contact"><span>Get In Touch</span></a> </li>
             </ul>
@@ -378,7 +379,7 @@
             if (pageSection == 'Work' || pageSection == 'clients' || pageSection == 'We' || pageSection == 'SparktLive' || pageSection == 'Contact') {
                 location.hash = "#" + pageSection.toLowerCase();
                 callback();
-            } 
+            }
         });
 
         jQuery(window).load(function () {
@@ -394,7 +395,7 @@
 
     </script>
 
-
+   
 
 </body>
 </html>
