--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -33,11 +33,11 @@
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/reset.css" />
-    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/bundle.css" />
-    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lightgallery.css" />
-    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lg-transitions.min.css" />
-    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
-    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
+        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/bundle.css" />
+        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lightgallery.css" />
+        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lg-transitions.min.css" />
+        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
+        <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
     <script type="application/ld+json">
         {
         "@@context": "https://schema.org",
@@ -85,6 +85,7 @@
                 <li><a href="/#we"><span>We</span></a> </li>
                 <li><a href="/#clients"><span>Clients</span></a> </li>
                 <li><a href="/#work"><span>Work</span></a> </li>
+                <li><a href="/#xms"><span>XMS</span></a> </li>
                 <li><a href="/#sparktlive"><span>Sparkt Live</span></a> </li>
                 <li><a href="/#contact"><span>Get In Touch</span></a> </li>
             </ul>
